Update PROJECT_STATUS.md with fix details and remaining work