@@ -1,143 +1,162 @@
 # B2 Deutsch App — PROJECT STATUS
 
-**Last Updated:** 2026-04-26 23:50 UTC
+**Last Updated:** 2026-04-28
 **GitHub:** https://github.com/halilmek/b2-deutsch-app
-**Firebase Project:** b2-deutsch-app (project_number: 419122108874)
-**Firebase Storage:** b2-deutsch-app.firebasestorage.app
+**Firebase:** b2-deutsch-app
 
 ---
 
-## 🔴 CRITICAL — b2_questions.json WAS CORRUPTED
+## 🔧 WHAT WE FIXED (2026-04-28)
 
-**What happened:** The `gen_merged_topic1.py` script (run during Topic 1 merge) copied the same 96 konnektor questions across ALL 22 topics in `b2_questions.json`. Every topic 2–23 was filled with duplicate copies of Topic 1's questions.
+### Bug: Topic ID Mismatch — Topics Showing Wrong Questions
 
-**Total questions in JSON:** 2,246 | **Unique texts:** 191 | **Duplicates:** 2,005
+**Problem:** Topic 2 in the app ("Verben und Ergänzungen") was loading Topic 1 (Konnektoren) questions. Topic 3 was loading Topic 2 questions, etc.
 
-**Fix applied (2026-04-26):**
-- Added 50 Topic 2 questions to `b2_questions.json`
-- Bumped SharedPreferences `quiz_progress_prefs_v4` to clear cached questions
-- Topic 2 now has correct 50 questions in local JSON
-- Topic 1 was already correct in JSON (96 konnektor questions)
+**Root Cause:** The app code (SubjectListViewModel) had a numbering gap — it jumped from `b2_01` → `b2_03`, skipping `b2_02`. The JSON files were named sequentially starting from `b2_01`, so:
+- `b2_01.json` (file) = Topic 1 Konnektoren ✅
+- `b2_02.json` (file) = Topic 2 Verben ✅
+- But the app expected: `b2_03` = Topic 2, `b2_04` = Topic 3 (because `b2_02` didn't exist in code)
 
----
+This caused every topic to load from the wrong file (always shifted by 1 down from where it should be).
 
-## 📋 CURRENT QUESTION STATUS
+**Solution (Option A):** Added the missing `b2_02` subject entry to SubjectListViewModel, shifting all subsequent topic IDs by +1.
 
-### Local `b2_questions.json`
-| Topic | ID | Questions | Content | Status |
-|-------|-----|---------|---------|--------|
-| 1 | b2_01 | 96 | Konnektoren (als, bevor, bis...) | ✅ Correct |
-| 2 | b2_02 | 50 | Verben und Ergänzungen (Reflexive + Präpositionen) | ✅ Correct |
-| 3-23 | b2_03–b2_23 | 100 each | **ALL WRONG** — duplicate konnektor questions | ❌ Need rebuild |
+### Changes Made
 
-### Firebase `moduleQuizQuestions`
-| Topic | Questions | Content | Status |
-|-------|-----------|---------|--------|
-| 1 | 96 | Konnektoren | ✅ Ready |
-| 2 | 50 | Verben und Ergänzungen | ✅ Ready |
-| 3-23 | 0 | — | ❌ Need import |
-
----
-
-## 🔌 APP FLOW (How Questions Are Loaded)
-
+**1. SubjectListViewModel.kt** — Added `b2_02` (Verben und Ergänzungen):
 ```
-Quiz starts
-    │
-    ▼
-QuizViewModel.startQuiz(subjectId)
-    │
-    ▼
-LocalQuestionBank.getNextQuiz(context, subjectId)
-    │
-    ├─► Reads from b2_questions.json (LOCAL ASSET)
-    │
-    ├─► topicId = "b2_01" → gets 96 questions from JSON
-    │
-    └─► topicId = "b2_02" → gets 50 questions from JSON ✅ NEW
-            │
-            ▼
-    SharedPreferences tracks active/passive Q IDs
+Before: b2_01, b2_03, b2_04, b2_05 ... b2_23
+After:  b2_01, b2_02, b2_04, b2_05 ... b2_23
 ```
 
-**Firebase `moduleQuizQuestions` is NOT read by the app yet.**
-It exists as a cloud backup and for future sync features.
+**2. JSON Files** — All 23 files verified and aligned to subject ID mapping:
+| File | subjectId | topicName | Questions | Status |
+|------|-----------|-----------|-----------|--------|
+| b2_01.json | b2_01 | Konnektoren | 96 | ✅ Real content |
+| b2_02.json | b2_02 | Verben und Ergänzungen | 50 | ✅ Real content |
+| b2_03.json | b2_03 | Verben und Ergänzungen | 50 | ⚠️ Duplicate of b2_02 |
+| b2_04.json | b2_04 | Zeitformen der Zukunft | 100 | ⚠️ Placeholder (wrong first Q) |
+| b2_05.json | b2_05 | Futur mit werden | 100 | ⚠️ Placeholder |
+| ... | ... | ... | 100 | ⚠️ Placeholders |
+| b2_23.json | b2_23 | Reserve | 100 | ⚠️ Placeholder |
+
+**3. LocalQuestionBank.kt** — Updated:
+- Uses per-topic JSON files (`{subjectId}.json`) instead of single `b2_questions.json`
+- Uses `quiz_progress_prefs_v6` (forces clean init on update)
+- `INIT_VERSION = 2` — version check clears old corrupt SharedPreferences
+- Debug logs added with tag `LQB`
+
+**4. gradle.properties** — kapt JVM args for JDK 21 compatibility:
+```
+kapt.use.worker.api=false
+org.gradle.jvmargs=--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED (and 4 more)
+```
 
 ---
 
-## 📌 TOPIC LIST (B2 — 22 Topics)
+## 📊 CURRENT CONTENT STATE
 
-| # | ID | Topic Name | Questions in JSON | Questions in Firebase |
-|---|-----|------------|-----------------|---------------------|
-| 1 | b2_01 | Konnektoren | 96 ✅ | 96 ✅ |
-| 2 | b2_02 | Verben und Ergänzungen | 50 ✅ | 50 ✅ |
-| 3 | b2_03 | Zeitformen in der Vergangenheit | 100 ❌ | 0 |
-| 4 | b2_04 | Zeitformen der Zukunft | 100 ❌ | 0 |
-| 5 | b2_05 | Futur mit werden | 100 ❌ | 0 |
-| 6 | b2_06 | Angaben im Satz | 100 ❌ | 0 |
-| 7 | b2_07 | Verneinung mit nicht | 100 ❌ | 0 |
-| 8 | b2_08 | Negationswörter | 100 ❌ | 0 |
-| 9 | b2_09 | Passiv Präteritum | 100 ❌ | 0 |
-| 10 | b2_10 | Konjunktiv II der Vergangenheit | 100 ❌ | 0 |
-| 11 | b2_11 | Konjunktiv II mit Modalverben | 100 ❌ | 0 |
-| 12 | b2_12 | Pronomen: einander | 100 ❌ | 0 |
-| 13 | b2_13 | Weiterführende Nebensätze | 100 ❌ | 0 |
-| 14 | b2_14 | Präpositionen mit Genitiv | 100 ❌ | 0 |
-| 15 | b2_15 | je und desto/umso + Komparativ | 100 ❌ | 0 |
-| 16 | b2_16 | Nomen-Verb-Verbindungen | 100 ❌ | 0 |
-| 17 | b2_17 | Folgen ausdrücken | 100 ❌ | 0 |
-| 18 | b2_18 | Ausdrücke mit Präpositionen | 100 ❌ | 0 |
-| 19 | b2_19 | Irreale Konditionalsätze | 100 ❌ | 0 |
-| 20 | b2_20 | Relativsätze im Genitiv | 100 ❌ | 0 |
-| 21 | b2_21 | Konjunktiv I in der indirekten Rede | 100 ❌ | 0 |
-| 22 | b2_22 | Konjunktiv II in irrealen Vergleichssätze | 100 ❌ | 0 |
+### ✅ Topics with Real Content (manually created / verified)
+| subjectId | topicName | Questions | Source |
+|-----------|-----------|-----------|--------|
+| b2_01 | Konnektoren | 96 | Real (12 per konnektor: als, bevor, bis, seitdem, während, wenn, sobbing, solange) |
+| b2_02 | Verben und Ergänzungen | 50 | Real (fill-in-blank: mich/mir, mich/mir, auf/an, etc.) |
+
+### ⚠️ Topics with Placeholder Content (need real questions)
+| subjectId | topicName | Current State |
+|-----------|-----------|---------------|
+| b2_03 | Verben und Ergänzungen | ❌ Duplicate of b2_02 — same 50 questions |
+| b2_04 | Zeitformen der Zukunft | ❌ All questions show Konnektor text instead of real content |
+| b2_05 | Futur mit werden | ❌ Placeholder |
+| b2_06 | Angaben im Satz | ❌ Placeholder |
+| b2_07 | Angaben im Satz | ❌ Duplicate placeholder |
+| b2_08–b2_23 | Various | ❌ All placeholders (wrong content) |
+
+**Note:** Topics 3–23 all contain the WRONG content — they show Konnektor questions instead of their actual topic content. This is because the original `b2_questions.json` was corrupted (Topics 3–23 all contained Topic 1 duplicate content).
+
+### 📋 Remaining Work
+1. **Fill b2_03.json** with proper Verben questions (or delete it — it's a duplicate of b2_02)
+2. **Fill b2_04–b2_23** with real grammar questions per topic
+3. **Delete b2_questions.json** (no longer used, removed locally)
 
 ---
 
-## 🛠️ WHAT NEEDS TO BE DONE
+## 🏗️ ARCHITECTURE SUMMARY
 
-### Priority 1 — Topics 3–23: Rebuild JSON Content
-- Generate 100 proper grammar questions per topic
-- Match Firebase schema: `{id, subjectId, level, questionText, options, correctAnswer, explanation, type, difficulty, tags}`
-- You provide curated questions OR I generate with AI
+### Question Loading Flow
+```
+User taps Topic 2 (Verben) in SubjectListFragment
+  → QuizViewModel.startQuiz("b2_02")
+    → LocalQuestionBank.getNextQuiz(context, "b2_02")
+      → Opens b2_02.json from assets
+      → Returns 10 questions from ACTIVE pool (from SharedPreferences)
+```
 
-### Priority 2 — Firebase Import for Topics 3–23
-- Create import scripts per topic (same as `firebase_import_topic2_verben.js`)
-- Run on MacBook after regenerating `b2_questions.json`
+### Per-Topic JSON File Structure
+```json
+{
+  "version": "1.0",
+  "subjectId": "b2_02",
+  "topicName": "Verben und Ergänzungen",
+  "totalQuestions": 50,
+  "questions": [
+    {
+      "id": "b2_02_q001",
+      "subjectId": "b2_02",
+      "type": "fill_blank",
+      "questionText": "Ich muss ___ beeilen, sonst verpasse ich den Zug.",
+      "options": ["mich", "mir", "sich", "dir"],
+      "correctAnswer": "mir",
+      "explanation": "'sich beeilen' is reflexive...",
+      "difficulty": "medium",
+      "topicName": "Verben und Ergänzungen"
+    }
+  ]
+}
+```
 
-### Priority 3 — App Enhancement (Future)
-- Add Firebase fallback: if topic not found in `b2_questions.json`, query `moduleQuizQuestions` by topicNumber
-- This enables cloud sync and content updates without app rebuilds
+### SharedPreferences (v6) Key Structure
+```
+quiz_progress_prefs_v6:
+  init_version = 2 (forces clean init on version change)
+  active_b2_01 = ["b2_01_q001", "b2_01_q002", ...]  (unsolved question IDs)
+  passive_b2_01 = ["b2_01_q005", ...]  (solved question IDs)
+  count_b2_01 = 96  (total questions for this topic)
+  active_b2_02 = ["b2_02_q001", ...]
+  passive_b2_02 = []
+  count_b2_02 = 50
+  ...
+```
 
 ---
 
 ## 📁 KEY FILES
 
-### Firebase Scripts
-- `content/reading/firebase_import_konnektoren.js` — Topic 1 (96 Q) → Firebase ✅
-- `content/reading/firebase_import_topic2_verben.js` — Topic 2 (50 Q) → Firebase ✅
-- `content/reading/firebase_fix_bis.js` — Fix 3 wrong bis questions in Firebase ✅
-- `content/reading/firebase_delete_old_konnektoren.js` — Cleanup script (ran, found 0 docs)
-
-### App Files
-- `app/src/main/assets/b2_questions.json` — Local question bank (CORRUPTED — needs fix for Topics 3–23)
-- `app/src/main/java/.../LocalQuestionBank.kt` — Active/passive tracking, SharedPreferences v4
-- `app/src/main/java/.../QuizViewModel.kt` — Quiz logic, reads from LocalQuestionBank
-
-### Architecture
-- **Primary source:** `b2_questions.json` (local asset, bundled in app)
-- **Cloud backup:** Firebase `moduleQuizQuestions` (per-topic collections)
-- **Progress:** SharedPreferences (offline, fast)
-- **Two collections:** `grammarQuizBank` (general) + `moduleQuizQuestions` (B2 module)
+| File | Purpose |
+|------|---------|
+| `app/src/main/assets/b2_01.json` | Topic 1: Konnektoren (96 Q) — REAL ✅ |
+| `app/src/main/assets/b2_02.json` | Topic 2: Verben und Ergänzungen (50 Q) — REAL ✅ |
+| `app/src/main/assets/b2_03.json` | Topic 3: Verben und Ergänzungen (50 Q) — DUPLICATE ⚠️ |
+| `app/src/main/assets/b2_04–b2_23.json` | Placeholder topics (100 Q each) — WRONG ❌ |
+| `app/src/main/assets/b2_questions.json` | OLD — deleted, no longer used |
+| `LocalQuestionBank.kt` | Reads per-topic JSON, manages progress via SharedPreferences |
+| `SubjectListViewModel.kt` | Defines all 23 B2 subjects with display order |
+| `QuizViewModel.kt` | Manages quiz session, calls LocalQuestionBank |
+| `gradle.properties` | JDK 21 kapt workaround, build config |
 
 ---
 
-## 🔗 FIREBASE CONSOLE LINKS
+## 🧪 TESTING CHECKLIST
 
-- **moduleQuizQuestions:** https://console.firebase.google.com/project/b2-deutsch-app/firestore/data~2FmoduleQuizQuestions
-- **grammarQuizBank:** https://console.firebase.google.com/project/b2-deutsch-app/firestore/data~2FgrammarQuizBank
-- **Firestore Rules:** https://console.firebase.google.com/project/b2-deutsch-app/firestore/rules
+After each code change:
+- [ ] Build APK (`./gradlew assembleRelease`)
+- [ ] Uninstall old APK from test device (SharedPreferences is versioned but clean slate is safer)
+- [ ] Install new APK, create fresh account
+- [ ] Topic 1 (Konnektoren): verify 10 Konnektor questions appear
+- [ ] Topic 2 (Verben und Ergänzungen): verify 10 Verb questions appear, NOT Konnektor
+- [ ] Topic 3: verify correct content per topic
+- [ ] Log check: `adb logcat | grep -E "LQB|QuizActive"` should show `subjectId=b2_02` for Topic 2
 
 ---
 
-_Last updated: 2026-04-26 23:50 UTC_
+_Last updated: 2026-04-28 16:20 UTC_
